background login, creada view recuperar contraseña

--- a/WebLegemClient/src/app/busqueda/busqueda.tmpl.html
+++ b/WebLegemClient/src/app/busqueda/busqueda.tmpl.html
@@ -51,8 +51,8 @@
                     <p>{{ vm.errorMessage }}</p>
                     <span class="ico-frown-o"></span>
                 </div>
-                <div class="dibujo_busqueda">
-                    <!--ng-if="!vm.errorMessage && vm.documentosEncontrados.length < 1"-->
+                <div class="dibujo_busqueda" ng-if="!vm.errorMessage && vm.documentosEncontrados.length < 1">
+                    
                     <span class="escudo-udenar">
                     </span>
                 </div>
