--- a/WebLegemClient/src/app/usuarios/usuarios.tmpl.html
+++ b/WebLegemClient/src/app/usuarios/usuarios.tmpl.html
@@ -16,6 +16,11 @@
                         <a>USUARIOS</a>
                     </span>
                 </li>
+                <li ui-sref="usuarios.recuperar-contrasena" ng-click="vm.tabActivo($event);">
+                    <span class="ico-adn">
+                        <a>RECUPERAR CONTRASEÑA</a>
+                    </span>
+                </li>
             </ul>
         </div>
         <div ui-view></div>
