news cambio html

--- a/WebLegemClient/src/css/plantillas/news.css
+++ b/WebLegemClient/src/css/plantillas/news.css
@@ -1,7 +1,7 @@
 ﻿.a_news {
     background: #fff;
     width: 100%;
-    background:#f7fffc;
+    background:#fafbfe;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
