--- a/WebLegemClient/src/app/gestion-documental/documento/crear-documento.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/crear-documento.tmpl.html
@@ -1,3 +1,5 @@
-﻿<p>{{ vm.paso }}</p>
-<div style="height:85px;"></div>
-<div ui-view class="view_gestion_documental"></div>
+﻿<div style="background:#e9eaed; min-height:100vh;">
+    <p>{{ vm.paso }}</p>
+    <div style="height:85px;"></div>
+    <div ui-view class="view_gestion_documental"></div>
+</div>
