--- a/WebLegemClient/src/app/busqueda/ver/ver-documento.tmpl.html
+++ b/WebLegemClient/src/app/busqueda/ver/ver-documento.tmpl.html
@@ -1,5 +1,5 @@
-﻿<div>
-    <div style="width: 100%; height: 90px;">
+﻿<div style="padding-top: 55px; width:100%; height: 100%">
+    <div style="width: 100%; height: 100%;">
 
     </div>
     <style>
@@ -9,4 +9,4 @@
         }
     </style>
     <embed class="pdf-viewer" name="plugin" src="{{ vm.id }}" type="application/pdf">
-</div>.
+</div>
