--- a/WebLegemClient/src/app/busqueda/ver/ver-documento.tmpl.html
+++ b/WebLegemClient/src/app/busqueda/ver/ver-documento.tmpl.html
@@ -1,11 +1,11 @@
-﻿<div style="padding-top: 55px; width:100%; height: 100%">
-    <div style="width: 100%; height: 100%;">
+﻿<div style="padding-top: 55px; width:100%; height: 100%;">
+    <div style="width: 100%; height: 85%;">
 
     </div>
     <style>
         .pdf-viewer {
             width: 100%;
-            height: 100vh;
+            height: 93vh;
         }
     </style>
     <embed class="pdf-viewer" name="plugin" src="{{ vm.id }}" type="application/pdf">
