Mocks configurados, se hizo cambios a los controladores para operaciones CRUD ya que tenian bugs

--- a/WebLegemClient/src/app/administracion/tipo-documento/tipo-documento.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-documento/tipo-documento.tmpl.html
@@ -10,6 +10,7 @@
         <div class="hijo_right">
             <wl-admin-crud  objeto-seleccionado="vm.tipoDocSeleccionado"
                 editando="vm.editando"
+                nuevo="vm.nuevo"
                 eliminar="vm.remover">
             </wl-admin-crud>
 
