--- a/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-entidad/tipos-entidad.tmpl.html
@@ -8,6 +8,7 @@
         <div class="hijo_right">
             <wl-admin-crud objeto-seleccionado="vm.tipoEntidadSeleccionado"
                 editando="vm.editando"
+                nuevo="vm.nuevo"
                 eliminar="vm.remover">
             </wl-admin-crud>
             
