--- a/WebLegemClient/src/app/administracion/entidad/entidad.tmpl.html
+++ b/WebLegemClient/src/app/administracion/entidad/entidad.tmpl.html
@@ -9,8 +9,9 @@
 
         <div class="hijo_right">
             <wl-admin-crud objeto-seleccionado="vm.entidadSeleccionada"
-                           editando="vm.editando"
-                           eliminar="vm.remover">
+                editando="vm.editando"
+                nuevo="vm.nuevo"
+                eliminar="vm.remover">
             </wl-admin-crud>
 
             <label class="texto_labels" for="nombre-entidad">Nombre de la entidad</label>
