--- a/WebLegemClient/src/app/busqueda/busqueda.tmpl.html
+++ b/WebLegemClient/src/app/busqueda/busqueda.tmpl.html
@@ -20,7 +20,7 @@
 
                 <form class="box_input_busqueda_principal">
                     <div>
-                        <input required name="busqueda" type="text" class="input_text_busqueda"
+                        <input required name="busqueda" type="text" class="input_text_ico"
                                ng-model="vm.palabrasABuscar" placeholder="Escriba aquí su busqueda(Ejemplo:Decreto)"
                                maxlength="50" id="nombre" />
                     </div>
