--- a/WebLegemClient/src/app/usuarios/control-roles/control-roles.tmpl.html
+++ b/WebLegemClient/src/app/usuarios/control-roles/control-roles.tmpl.html
@@ -2,8 +2,8 @@
 
     <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~1-->
     <div class="box_left">
-        <div class="box_input_ico">           
-            <input type="text" class="input_text_ico" maxlength="20" placeholder="Filtro" />           
+        <div class="box_input_btn">           
+            <input type="text" class="input_text_btn" maxlength="20" placeholder="Filtro" />           
             <button class="btn_cancel" title="Quitar filtro" disabled>
                 <span class="ico-plus"></span>
             </button>           
@@ -15,6 +15,12 @@
                 <input type="radio" class="styled" id="a" name="a"/>
                 <label class="styled"  for="a">
                     super su
+                </label>
+            </li>
+            <li>
+                <input type="radio" class="styled" id="b" name="b" />
+                <label class="styled" for="b">
+                    administrador
                 </label>
             </li>
             <li>
