--- a/WebLegemClient/src/app/usuarios/control-usuarios/control-usuarios.tmpl.html
+++ b/WebLegemClient/src/app/usuarios/control-usuarios/control-usuarios.tmpl.html
@@ -65,9 +65,17 @@
 
         <div class="box_duo_input">
             <div>
+                <p class="texto_labels green">Correo Electronico</p>
+                <input class="a_input" />
+            </div>
+            <div>
                 <p class="texto_labels green">Rol del usuario</p>
                 <input class="a_input" />
             </div>
+        </div>
+
+        <div class="box_duo_input">
+            
             <div>
                 <p class="texto_labels green">Estado del usuario</p>
                 <div class="contenedor_radios">
@@ -79,32 +87,8 @@
                     </span>
                 </div>
             </div>
+            <div></div>
         </div>
-
-        <!--
-        <p class="texto_labels green bold">Permisos</p>        
-        <div class="contenedor_permisos">
-            <div class="titulo_modulo">
-                <p class="texto_labels">Administracion</p>
-                <p class="estado_permiso">Permitir todo</p>
-                <div class="switch_container">
-                    <input type="checkbox" id="switch1" name="switch1"
-                           class="switch" />
-                    <label for="switch1"></label>
-                </div>
-            </div>
-                        
-            <div class="permiso_submodulo">
-                <p>Tipo Entidad</p>
-                <p class="estado_permiso">No permitido</p>
-                <div class="switch_container">
-                    <input type="checkbox" id="switch1" name="switch1"
-                           class="switch" />
-                    <label for="switch1"></label>
-                </div>
-            </div>
-        </div>
-        -->
 
         <div class="controles_box_right down">
             <button class="btn_con_ico" type="button">
