--- a/WebLegemClient/src/app/usuarios/usuarios.tmpl.html
+++ b/WebLegemClient/src/app/usuarios/usuarios.tmpl.html
@@ -17,7 +17,7 @@
                     </span>
                 </li>
                 <li ui-sref="usuarios.recuperar-contrasena" ng-click="vm.tabActivo($event);">
-                    <span class="ico-adn">
+                    <span class="ico-credit-card">
                         <a>RECUPERAR CONTRASEÑA</a>
                     </span>
                 </li>
