--- a/WebLegemClient/src/css/directivas/sort_busqueda.css
+++ b/WebLegemClient/src/css/directivas/sort_busqueda.css
@@ -24,7 +24,7 @@
 }
 
 .bar_ordenamiento li.active_filter{ 
-    box-shadow:inset 0 0 0 2px #099472;
+    box-shadow:inset 0 3px 0 #099472;
     color:#099472;
     border-color:#099472;
 }
