--- a/WebLegemClient/src/css/elementos/listado.css
+++ b/WebLegemClient/src/css/elementos/listado.css
@@ -1,4 +1,4 @@
-﻿/*select --ESTILOS PARA LOS SELECT--*/
+﻿/*select --ESTILOS PARA LAS LISTAS--*/
 
 
 .a_listado{ 
@@ -14,20 +14,12 @@
 
 
 .a_listado li{  
-    border-left:1.5px solid #a1a1a1;
-    border-right:1.5px solid #a1a1a1;
-    border-bottom:1.5px solid #a1a1a1;
+    border:1px solid #a1a1a1;
+    border-top:none;
 }
 
 .a_listado li:first-child{
-    border:1.5px solid #a1a1a1;
-    border-top-left-radius:4px;
-    border-top-right-radius:4px;
-}
-.a_listado li:last-child{
-    border-bottom:1.5px solid #a1a1a1;
-    border-bottom-left-radius:4px;
-    border-bottom-right-radius:4px;
+    border-top:1px solid #a1a1a1;
 }
 
 
@@ -35,9 +27,9 @@ label.styled {
   display: block;
   text-align: left;
   padding: 0 0 0 10px;
-  color: #21262c;
-  font-family:Verdana;
-  font-size:14px;
+  color: #222;
+  font-family:"Lato-Regular";
+  font-size:.9em;
 
   transition: all 0.3s ease;
 
