--- a/WebLegemClient/src/css/estilos_weblegem.css
+++ b/WebLegemClient/src/css/estilos_weblegem.css
@@ -5,7 +5,7 @@
     color: white;
     text-align:center;
     height:auto;
-    background: rgb(60, 75, 86);  
+    background: #0f745b;  
     display:block;
     padding:0.5em;
     font-family:'OpenSans-Bold';
@@ -48,6 +48,7 @@
     border: solid 1px #434e58;
 }
 
+
 /*Disposiciones*/
 
 .a_centrado{
@@ -56,3 +57,16 @@
     width:100%;
 }
 
+@media only screen and (max-width : 320px) {
+    .espacio_blanco{
+        height:55px;
+        width:30px;
+    }
+}
+
+@media only screen and (min-width : 320px) {
+    .espacio_blanco{
+        height:100px;
+        width:30px;
+    }
+}
