--- a/WebLegemClient/src/css/plantillas/login.css
+++ b/WebLegemClient/src/css/plantillas/login.css
@@ -1,90 +1,33 @@
-﻿    .contenedor_login{
-    width:420px;
-    margin: 0 auto;
-    padding: 150px 0 0 0;
+﻿.contenedor_login{
+    max-width:420px;
+    box-shadow:0 0 0 1px rgba(0, 0, 0, 0.05),0 1px 2px rgba(0, 0, 0, 0.3);   
 }
 
-        .contenedor_login:before {
-            content: '';
-            background-image: url('../../recursos/header/entrada.jpg');
-            /*background-image: url('../../recursos/índice2.png');*/
-            background-size: cover;
-            -webkit-filter: brightness(100%);
-            filter: brightness(100%);
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            z-index: -1;
-        }
-
-.subtitulo {
-    background:transparent;
+.contenedor_login:before {
+    content: '';
+    background-image: url('../../recursos/header/entrada.jpg');
+    /*background-image: url('../../recursos/índice2.png');*/
+    background-size: cover;
+    -webkit-filter: brightness(100%);
+    filter: brightness(100%);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
 
-.subtitulo > p{
-    font-family:'OpenSans';
-    font-size:2rem;
-    text-align:center;
-    color: #444;
-    padding: 10px 0 10px 0 ;
+.contenedor_login > div{  
 }
-
-
-#user_login,
-#user_lock{
-    color:white;
-    font-size:xx-large;
-}
-
 
 .form_login{
-    background:rgba(255, 255, 255, 0.6);
-    padding: 0 24px 24px 24px;
-    position:relative;
+    background:rgba(255, 255, 255, 1);
+    padding:20px;
 }
 
-
-.a_input:focus::-moz-placeholder{
-    color: #156815;
-    font-weight:bold;
+.form_login > div{
 }
-
-
-.a_input:focus + .circulo1,
-.a_input:focus + .circulo2{
-    background: #156815;
-}
-
-
-.circulo1,.circulo2 {
-    position:absolute;
-    display:flex;
-    right: -5%;
-    top: -5px;
-    width: 50px;
-    height: 50px;
-    justify-content:center;
-
-     -moz-border-radius: 50%;
-     -webkit-border-radius: 50%;
-     border-radius: 50%;
-     background: #a1a1a1;
-     transition:all 0.5s;
-    -webkit-transition:all 0.5s;
-    -moz-transition: all 0.5s; 
-}
-
-.input_container_login{
-    position:relative;
-    width:95%;
-}
-
-.input_container_login > div > span{
-    margin-top:10px;
-}
-
     
 .olvide_contraseña{
     padding-top:20px;
@@ -93,6 +36,53 @@
     font-size:small;
 }
 
-.size_input_login{
-    padding-right:30px;
+.inputs_login{
+    margin-bottom:20px;
+}
+
+.mensaje_login{
+    font-family:"Lato-Regular";
+    text-align:center;
+    color:#999;
+    font-size:1.2em;
+    border-bottom: 1px solid #bbb;
+    margin-bottom:10px;
+    padding-bottom:5px; 
+}
+
+/*==========  Mobile First Method  ==========*/
+
+/* Custom, iPhone Retina */ 
+@media only screen and (max-width : 320px) {
+    .form_login{
+        height:100vh;
+    }
+    .contenedor_login{
+    }
+}
+
+
+@media only screen and (min-width : 320px) {
+    .contenedor_login{
+        margin: auto;
+        
+        margin-top:10vh;
+    }
+}
+
+/* Extra Small Devices, Phones */ 
+@media only screen and (min-width : 480px) {
+
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width : 768px) {
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width : 992px) {
+}
+
+/* Large Devices, Wide Screens */
+@media only screen and (min-width : 1200px) {
 }
